fix mobile issues on Dashboard
- fix thumnail behavior
- fix Titles are overlapping
- fix button placement

--- a/app/view/sass/modules/_dashboard.scss
+++ b/app/view/sass/modules/_dashboard.scss
@@ -143,9 +143,36 @@
 .dashboardlisting td.excerpt.large span {
     max-height: 54px;
 }
+.contenttype-title {
+
+}
 
 @media (max-width: 767px) {
     .visible-xs {
         display: inline !important;
     }
+    .btn-group {
+        margin-top:-8px;
+        margin-bottom:8px;
+    }
+    .contenttype-title {
+        width: auto;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .dashboardlisting td.listthumb img {
+    margin-left: -32px;
+    }
+}
+
+@media (max-width: 640px) {    
+    .dashboardlisting td.listthumb img {
+        margin-top:42px;
+        margin-bottom:4px;
+    }
+    .dashboardlisting td.actions .btn-group {
+        margin-top: 2px;
+    }
+
 }
